--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,10 +40,22 @@ body{
   height: 373px;
   justify-content: space-between;
 }
+
 .teclado img{
-  width: 22%;
+  width: 100%;
   height: 62.91px;
 }
+
+#uno, #dos, #tres, #cero, #punto, #igual {
+  width: 100%;
+  height: 62.91px;
+}
+
+#mas{
+  width: 100%;
+  height: 136.91px;
+}
+
 @font-face {
   font-family: digital;
   src: url("../fonts/digital.ttf");
@@ -69,8 +81,8 @@ body{
   width: 25%;
   align-items: flex-start;
 }
-#mas{
-  width: 90%;
+#teclaMas{
+  width: 100%;
   height: 100%;
   margin-left: 10px;
 
